--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -39,6 +39,7 @@ fr:
   submitted: "soumis"
   thanks_for_comment: "Merci pour le commentaire !"
   tier: "Étage"
+  tournament_claimed: "Tournoi réclamé"
   tournament_created: "On a créé le tournoi"
   tournament_dates: "Dates de tournoi"
   tournament_updated: "On a changé le tournoi"
