--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,70 +1,82 @@
+---
 fr:
-  accept: "accepter"
+  accept: accepter
+  approve: Approuver
+  approved_claims: Demandes Approuvées
+  claim: Demander
+  claim_tournament: Demandez %{tournament}
+  claims: demandes
+  contact: Contactez-nous
   contact_us: Contact
-  conversation_with: "Conversation avec"
-  deadline: "fin des inscriptions"
-  edit: "éditer"
-  format: "Format"
-  from_anonymous: "d'anonyme"
-  game: "titre"
-  have_something_to_tell_us: "Avez-vous quelque chose à nous dire ?"
-  home_page: "page d'entrée"
-  ignore: "ignorer"
-  links: "liens"
-  manage_tournaments: "gestion de tournoi"
-  mark_done: "marquer faite"
-  mark_todo: "marquer à faire"
-  messages: "messages"
-  minimum_characters: "%{min_char} caractères minimum"
-  name: "nom"
-  needs_action: "nécessite une action"
-  new_tournament: "créer"
-  not_authorized: "Vous ne pouvez pas faire ça"
-  notes: "notes"
-  organizers: "Organisateurs"
-  past_tournaments: "tournois passés"
-  pending: "en attente"
-  please_update_password: "Veuillez vous changer votre nom de passe"
-  publish: "publier"
-  published: "publié"
-  register: "s'inscrire"
-  registration: registration
-  registration_opportunities: "possibilités d'inscription au tournoi"
-  restrictions: "restrictions"
-  rules: "règles"
-  send_message: "envoyer le message"
-  sender: "l'envoyeur"
-  sign_out: "se déconnecter"
-  site_admin: "Admin du site"
-  submitted: "soumis"
-  thanks_for_comment: "Merci pour le commentaire !"
-  thing_updated: "On a changé %{name}"
-  tier: "Étage"
-  tournament_claimed: "Tournoi réclamé"
-  tournament_created: "On a créé le tournoi"
-  tournament_dates: "Dates de tournoi"
-  unread: "non lu"
+  conversation_with: Conversation avec
   date:
     formats:
       day_month: "%-d %B"
-  time:
-    formats:
-      day_month: "%-d %B"
+  deadline: fin des inscriptions
+  edit: éditer
+  format: Format
+  from_anonymous: d'anonyme
+  game: titre
+  have_something_to_tell_us: Avez-vous quelque chose à nous dire ?
   helpers:
     label:
       tournament:
-        end_date: "date de fin"
-        format: "format"
-        game: "titre"
-        info_url: "url d'info"
-        liquipedia_url: "url de liquipedia"
-        name: "nom"
-        notes: "notes"
-        organizers: "organisateurs"
-        prize_pool: "prizepool"
-        registration_close: "fin des inscriptions"
-        registration_url: "url de inscription"
-        restrictions: "restrictions"
-        rules_url: "url de régles"
-        start_date: "date de début"
-        tier: "étage"
+        end_date: date de fin
+        format: format
+        game: titre
+        info_url: url d'info
+        liquipedia_url: url de liquipedia
+        name: nom
+        notes: notes
+        organizers: organisateurs
+        prize_pool: prizepool
+        registration_close: fin des inscriptions
+        registration_url: url de inscription
+        restrictions: restrictions
+        rules_url: url de régles
+        start_date: date de début
+        tier: étage
+  home_page: page d'entrée
+  ignore: ignorer
+  links: liens
+  manage_tournaments: gestion de tournoi
+  mark_done: marquer faite
+  mark_todo: marquer à faire
+  messages: messages
+  name: nom
+  needs_action: nécessite une action
+  new_tournament: créer
+  not_authorized: Vous ne pouvez pas faire ça
+  notes: notes
+  organizers: Organisateurs
+  past_tournaments: tournois passés
+  pending: en attente
+  please_update_password: Veuillez vous changer votre nom de passe
+  publish: publier
+  published: publié
+  register: s'inscrire
+  registration: registration
+  registration_opportunities: possibilités d'inscription au tournoi
+  remove_approval: Supprimer l'approbation
+  restrictions: restrictions
+  rules: règles
+  send_message: envoyer le message
+  sender: l'envoyeur
+  sign_out: se déconnecter
+  site_admin: Admin du site
+  submitted: soumis
+  thanks_for_comment: Merci pour le commentaire !
+  thing_deleted: On a supprimé %{name}
+  thing_updated: On a changé %{name}
+  tier: Étage
+  time:
+    formats:
+      day_month: "%-d %B"
+  tournament_claim_submitted_for_approval: La demande soumise pour approbation
+  tournament_created: On a créé le tournoi
+  tournament_dates: Dates de tournoi
+  unapproved_claims: Demandes non Approuvées
+  unclaim: Supprimer la demande
+  unread: non lu
+  update: Changez
+  why_we_should_accept_your_claim: Veuillez décrire pourquoi nous devrions approuver votre demande
