REG-16 provide links to sign in/up

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -38,7 +38,7 @@ fr:
         rules_url: url de régles
         start_date: date de début
         tier: étage
-  home_page: page d'entrée
+  home_page: Page d'entrée
   ignore: ignorer
   learn_more: en savoir plus
   links: liens
